--- a/.github/workflows/publish-dockproj.yml
+++ b/.github/workflows/publish-dockproj.yml
@@ -8,6 +8,6 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build and push the image
         run: |
-          docker login --username adeniyilowee --password ${{ secrets.DOCKPROJ_PAT }} ghcr.io
-          docker build. --tag ghcr.io/adeniyilowee/dockproj:latest
-          docker push ghcr.io/adeniyilowee/dockproj:latest
+          docker login --username Adeniyilowee --password ${{ secrets.DOCKPROJ_PAT }} ghcr.io
+          docker build. --tag ghcr.io/Adeniyilowee/dockproj:latest
+          docker push ghcr.io/Adeniyilowee/dockproj:latest
